crates/lingui_macro/tests/snapshots/lingui_directive__jsdoc_block_comment_directive.snap
---
source: crates/lingui_macro/tests/lingui_directive.rs
---
import { t } from '@lingui/core/macro';
/** lingui-set context="jsdoc" */
const msg = t`Hello`

↓ ↓ ↓ ↓ ↓ ↓

import { i18n as $_i18n } from "@lingui/core";
/** lingui-set context="jsdoc" */ const msg = $_i18n._(/*i18n*/ {
    id: "AXmcdV",
    message: "Hello",
    context: "jsdoc"
});
