crates/lingui_macro/tests/snapshots/lingui_directive__jsx_trans_with_directive_context.snap
---
source: tests/lingui_directive.rs
---
import { Trans } from "@lingui/react/macro";
/* lingui-set context="my context" */
const el = <Trans>Hello</Trans>;

↓ ↓ ↓ ↓ ↓ ↓

import { Trans as Trans_ } from "@lingui/react";
/* lingui-set context="my context" */ const el = <Trans_ {.../*i18n*/ {
    id: "WMU_Op",
    message: "Hello",
    context: "my context"
}}/>;
